Checkpoint: Tradução de textos hardcoded para suporte PT/EN: ReuniõesGestores, ReuniõesLojas, OcorrenciaEstrutural, HistoricoOcorrencias, ResultadosDashboard, ResultadosUpload, RelatorioIAResultados (parcial), Categorias, TopicosReuniao. Ficheiros de tradução PT e EN expandidos com novas chaves para resultados, relatório IA, categorias e common.

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -1031,5 +1031,114 @@
     "comparacaoSucesso": "Comparison generated successfully!",
     "erroComparacao": "Error generating comparison. Please try again.",
     "erroComparacaoMsg": "Error generating comparison:"
+  },
+  "resultados": {
+    "dashboardResultados": "Results Dashboard",
+    "analisePerformance": "Performance analysis and store metrics",
+    "semDadosDisponiveis": "No Data Available",
+    "nenhumFicheiroCarregado": "No Excel file has been uploaded yet. The administrator needs to upload the monthly results.",
+    "periodoPrincipal": "Main Period",
+    "selecionarMeses": "Select months",
+    "dadosAgregados": "Aggregated data from",
+    "meses": "months",
+    "compararCom": "Compare with (optional)",
+    "compararCom2": "Compare with 2 (optional)",
+    "lojaEvolucao": "Store (Evolution)",
+    "selecioneLoja": "Select a store",
+    "minhasLojas": "My Stores",
+    "todasLojas": "All Stores",
+    "metricaRanking": "Metric (Ranking)",
+    "aGerarRelatorio": "Generating report...",
+    "exportarRelatorioExcel": "Export Excel Report",
+    "comparacaoTemporal": "Temporal Comparison",
+    "compareEstatisticas": "Compare statistics between different periods",
+    "totalLojas": "Total Stores",
+    "totalServicos": "Total Services",
+    "acimaDoObjetivo": "Above Target",
+    "taxaMediaReparacao": "Average Repair Rate",
+    "igual": "Equal",
+    "comDadosNoPeriodo": "With data in period",
+    "mediaMensal": "Monthly average",
+    "dasLojas": "of stores",
+    "evolucaoMensal": "Monthly Evolution",
+    "minhasLojasAgregado": "My Stores (Aggregated)",
+    "ultimos6Meses": "Last 6 months",
+    "servicos": "services",
+    "semDadosEvolucao": "No evolution data for this store",
+    "semDadosRanking": "No ranking data for this period",
+    "vendasComplementares": "Complementary Sales",
+    "servicosEscovas": "% Brush Services",
+    "premioTrimestral": "Quarterly Bonus",
+    "lojasAcimaObjetivo": "Stores above target",
+    "totalVendas": "Total Sales",
+    "exclPeliculas": "excl. films",
+    "escovas": "Brushes",
+    "peliculas": "Films",
+    "lojasComVendas": "Stores with Sales",
+    "venderamEscovas": "sold brushes",
+    "breakdownCategoria": "Breakdown by Category",
+    "top5LojasVendas": "Top 5 Stores - Complementary Sales",
+    "semDadosVendasComplementares": "No complementary sales data for this period",
+    "resultadosPorZona": "Results by Geographic Zone",
+    "desvioMedio": "Average Deviation",
+    "taxaReparacao": "Repair Rate",
+    "totalReparacoes": "Total Repairs",
+    "semDadosPorZona": "No data by zone for this period",
+    "lojas": "stores",
+    "desvioVsObjetivo": "Deviation vs Target (%)",
+    "servicosPorColaborador": "Services per Employee",
+    "uploadResultados": "Upload Results",
+    "uploadDescricao": "Upload the monthly Excel file with store results",
+    "ficheiroExcel": "Excel File",
+    "selecioneFicheiroFolhas": "Select the Excel file with 'Faturados' and 'Complementares' sheets",
+    "ficheiro": "File",
+    "selecionarFicheiroExcel": "Select Excel file",
+    "selecionarMes": "Select month",
+    "selecionarAno": "Select year",
+    "aProcessar": "Processing...",
+    "fazerUploadProcessar": "Upload and Process",
+    "uploadConcluidoSucesso": "Upload Completed Successfully",
+    "uploadConcluidoAvisos": "Upload Completed with Warnings",
+    "lojasProcessadasSucesso": "Stores processed successfully",
+    "errosEncontrados": "Errors found",
+    "instrucoesFaturados": "Instructions - 'Faturados' Sheet",
+    "instrucoesComplementares": "Instructions - 'Complementares' Sheet (Optional)",
+    "selecioneFicheiroExcel": "Please select an Excel file (.xlsx or .xls)",
+    "selecioneFicheiroMesAno": "Please select the file, month and year",
+    "erroProcessarFicheiro": "Error processing file",
+    "erroUpload": "Error uploading"
+  },
+  "relatorioIA": {
+    "titulo": "AI Results Report",
+    "descricao": "Deep quantitative analysis of service results with detailed metrics and complete rankings",
+    "gerarAnalise": "Generate Quantitative Analysis",
+    "analiseBaseada": "Analysis based on numerical data: services, targets, rates and trends",
+    "minhasLojas": "My Stores",
+    "todoOPais": "Entire Country",
+    "selecioneZonas": "Select zone(s)",
+    "zona": "Zone",
+    "zonasSelecionadas": "zones selected",
+    "gestor": "Manager",
+    "selecioneGestor": "Select manager",
+    "selecionePeloMenosUmaZona": "Select at least one zone",
+    "selecioneUmGestor": "Select a manager",
+    "aGerarRelatorio": "Generating advanced AI results report..."
+  },
+  "categorias": {
+    "titulo": "Categories",
+    "descricao": "Manage and track reports organized by category",
+    "naoEncontrada": "Category not found",
+    "exportadaSucesso": "Category exported successfully",
+    "erroExportar": "Error exporting category",
+    "estadoAtualizado": "Status updated",
+    "erroAtualizarEstado": "Error updating status"
+  },
+  "common": {
+    "filtros": "Filters",
+    "nenhum": "None",
+    "mes": "Month",
+    "ano": "Year",
+    "voltarDashboard": "Back to Dashboard",
+    "erroDesconhecido": "Unknown error"
   }
 }
