--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -1031,5 +1031,114 @@
     "comparacaoSucesso": "Comparação gerada com sucesso!",
     "erroComparacao": "Erro ao gerar comparação. Tente novamente.",
     "erroComparacaoMsg": "Erro ao gerar comparação:"
+  },
+  "resultados": {
+    "dashboardResultados": "Dashboard de Resultados",
+    "analisePerformance": "Análise de performance e métricas das lojas",
+    "semDadosDisponiveis": "Sem Dados Disponíveis",
+    "nenhumFicheiroCarregado": "Nenhum ficheiro Excel foi carregado ainda. O administrador precisa fazer upload dos resultados mensais.",
+    "periodoPrincipal": "Período Principal",
+    "selecionarMeses": "Selecionar meses",
+    "dadosAgregados": "Dados agregados de",
+    "meses": "meses",
+    "compararCom": "Comparar com (opcional)",
+    "compararCom2": "Comparar com 2 (opcional)",
+    "lojaEvolucao": "Loja (Evolução)",
+    "selecioneLoja": "Selecione uma loja",
+    "minhasLojas": "Minhas Lojas",
+    "todasLojas": "Todas as Lojas",
+    "metricaRanking": "Métrica (Ranking)",
+    "aGerarRelatorio": "A gerar relatório...",
+    "exportarRelatorioExcel": "Exportar Relatório Excel",
+    "comparacaoTemporal": "Comparação Temporal",
+    "compareEstatisticas": "Compare estatísticas entre diferentes períodos",
+    "totalLojas": "Total de Lojas",
+    "totalServicos": "Total de Serviços",
+    "acimaDoObjetivo": "Acima do Objetivo",
+    "taxaMediaReparacao": "Taxa Média Reparação",
+    "igual": "Igual",
+    "comDadosNoPeriodo": "Com dados no período",
+    "mediaMensal": "Média mensal",
+    "dasLojas": "das lojas",
+    "evolucaoMensal": "Evolução Mensal",
+    "minhasLojasAgregado": "Minhas Lojas (Agregado)",
+    "ultimos6Meses": "Últimos 6 meses",
+    "servicos": "serviços",
+    "semDadosEvolucao": "Sem dados de evolução para esta loja",
+    "semDadosRanking": "Sem dados de ranking para este período",
+    "vendasComplementares": "Vendas Complementares",
+    "servicosEscovas": "% Serviços de Escovas",
+    "premioTrimestral": "Prémio Trimestral",
+    "lojasAcimaObjetivo": "Lojas acima do objetivo",
+    "totalVendas": "Total Vendas",
+    "exclPeliculas": "excl. películas",
+    "escovas": "Escovas",
+    "peliculas": "Películas",
+    "lojasComVendas": "Lojas com Vendas",
+    "venderamEscovas": "venderam escovas",
+    "breakdownCategoria": "Breakdown por Categoria",
+    "top5LojasVendas": "Top 5 Lojas - Vendas Complementares",
+    "semDadosVendasComplementares": "Sem dados de vendas complementares para este período",
+    "resultadosPorZona": "Resultados por Zona Geográfica",
+    "desvioMedio": "Desvio Médio",
+    "taxaReparacao": "Taxa Reparação",
+    "totalReparacoes": "Total Reparações",
+    "semDadosPorZona": "Sem dados por zona para este período",
+    "lojas": "lojas",
+    "desvioVsObjetivo": "Desvio vs Objetivo (%)",
+    "servicosPorColaborador": "Serviços por Colaborador",
+    "uploadResultados": "Upload de Resultados",
+    "uploadDescricao": "Faça upload do ficheiro Excel mensal com os resultados das lojas",
+    "ficheiroExcel": "Ficheiro Excel",
+    "selecioneFicheiroFolhas": "Selecione o ficheiro Excel com as folhas 'Faturados' e 'Complementares'",
+    "ficheiro": "Ficheiro",
+    "selecionarFicheiroExcel": "Selecionar ficheiro Excel",
+    "selecionarMes": "Selecionar mês",
+    "selecionarAno": "Selecionar ano",
+    "aProcessar": "A processar...",
+    "fazerUploadProcessar": "Fazer Upload e Processar",
+    "uploadConcluidoSucesso": "Upload Concluído com Sucesso",
+    "uploadConcluidoAvisos": "Upload Concluído com Avisos",
+    "lojasProcessadasSucesso": "Lojas processadas com sucesso",
+    "errosEncontrados": "Erros encontrados",
+    "instrucoesFaturados": "Instruções - Folha 'Faturados'",
+    "instrucoesComplementares": "Instruções - Folha 'Complementares' (Opcional)",
+    "selecioneFicheiroExcel": "Por favor, selecione um ficheiro Excel (.xlsx ou .xls)",
+    "selecioneFicheiroMesAno": "Por favor, selecione o ficheiro, mês e ano",
+    "erroProcessarFicheiro": "Erro ao processar ficheiro",
+    "erroUpload": "Erro ao fazer upload"
+  },
+  "relatorioIA": {
+    "titulo": "Relatório IA de Resultados",
+    "descricao": "Análise quantitativa profunda dos resultados de serviços com métricas detalhadas e rankings completos",
+    "gerarAnalise": "Gerar Análise Quantitativa",
+    "analiseBaseada": "Análise baseada em dados numéricos: serviços, objetivos, taxas e tendências",
+    "minhasLojas": "Minhas Lojas",
+    "todoOPais": "Todo o País",
+    "selecioneZonas": "Selecione zona(s)",
+    "zona": "Zona",
+    "zonasSelecionadas": "zonas selecionadas",
+    "gestor": "Gestor",
+    "selecioneGestor": "Selecione gestor",
+    "selecionePeloMenosUmaZona": "Selecione pelo menos uma zona",
+    "selecioneUmGestor": "Selecione um gestor",
+    "aGerarRelatorio": "A gerar relatório IA de resultados avançado..."
+  },
+  "categorias": {
+    "titulo": "Categorias",
+    "descricao": "Gerir e acompanhar relatórios organizados por categoria",
+    "naoEncontrada": "Categoria não encontrada",
+    "exportadaSucesso": "Categoria exportada com sucesso",
+    "erroExportar": "Erro ao exportar categoria",
+    "estadoAtualizado": "Estado atualizado",
+    "erroAtualizarEstado": "Erro ao atualizar estado"
+  },
+  "common": {
+    "filtros": "Filtros",
+    "nenhum": "Nenhum",
+    "mes": "Mês",
+    "ano": "Ano",
+    "voltarDashboard": "Voltar ao Dashboard",
+    "erroDesconhecido": "Erro desconhecido"
   }
 }
