Checkpoint: Adicionada funcionalidade de gravação de voz no chatbot do Assistente IA: botão de microfone junto ao campo de texto, gravação de áudio, transcrição via API Whisper, e envio automático como pergunta ao chatbot.

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -833,6 +833,17 @@
     "limparConversa": "Clear Conversation",
     "pensando": "Thinking...",
     "erro": "An error occurred. Please try again.",
+    "gravarVoz": "Record voice message",
+    "gravacaoIniciada": "Recording started - speak now",
+    "gravacaoCancelada": "Recording cancelled",
+    "processandoAudio": "Processing audio...",
+    "transcrevendo": "Transcribing...",
+    "transcricaoCompleta": "Transcription complete!",
+    "erroMicrofone": "Error accessing microphone. Check permissions.",
+    "erroConfiguracao": "Configuration error",
+    "erroTranscricao": "Transcription error",
+    "erroDesconhecido": "Unknown error",
+    "audioMuitoGrande": "Audio too large (max 16MB)",
     "descricaoAjuda": "I can help you with information about stores, managers, reports, pending items, alerts, occurrences, tasks, meetings and much more.",
     "lojasEGestores": "Stores and Managers",
     "relatorios": "Reports",
