--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -782,7 +782,26 @@
     "enviar": "Enviar",
     "limparConversa": "Limpar Conversa",
     "pensando": "A pensar...",
-    "erro": "Ocorreu um erro. Por favor tente novamente."
+    "erro": "Ocorreu um erro. Por favor tente novamente.",
+    "gravarVoz": "Gravar mensagem de voz",
+    "gravacaoIniciada": "Gravação iniciada - fale agora",
+    "gravacaoCancelada": "Gravação cancelada",
+    "processandoAudio": "A processar áudio...",
+    "transcrevendo": "A transcrever...",
+    "transcricaoCompleta": "Transcrição completa!",
+    "erroMicrofone": "Erro ao aceder ao microfone. Verifique as permissões.",
+    "erroConfiguracao": "Erro de configuração",
+    "erroTranscricao": "Erro na transcrição",
+    "erroDesconhecido": "Erro desconhecido",
+    "audioMuitoGrande": "Áudio muito grande (máx 16MB)",
+    "descricaoAjuda": "Pergunte-me sobre lojas, gestores, relatórios, pendentes ou qualquer informação da plataforma.",
+    "lojasEGestores": "Lojas e Gestores",
+    "relatorios": "Relatórios",
+    "pendentes": "Pendentes",
+    "ocorrencias": "Ocorrências",
+    "tarefasToDo": "Tarefas To-Do",
+    "resultados": "Resultados",
+    "sugestoes": "Sugestões"
   },
   "minhasLojas": {
     "title": "Minhas Lojas",
