Checkpoint: Correção de traduções em falta na página Histórico de Ocorrências - adicionadas chaves: ocorrenciasEstruturais, suasOcorrencias, todasOcorrencias, reportadas, estadoEmAnalise, estadoEmResolucao, resolvidas, estadoReportado, estadoResolvido, baixo, medio, alto, critico, estado, impacto, tema, atualizadaSucesso, emailEnviadoAdmin, nacional, regional, zona, fotos, nenhumaEncontrada, nenhumaCorrespondeFiltros, aindaNaoReportadas, reportarOcorrencia

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -812,7 +812,33 @@
     "alta": "High",
     "critica": "Critical",
     "semOcorrencias": "No occurrences registered",
-    "ocorrenciaCriada": "Occurrence registered successfully"
+    "ocorrenciaCriada": "Occurrence registered successfully",
+    "ocorrenciasEstruturais": "Structural Occurrences",
+    "suasOcorrencias": "Your reported occurrences",
+    "todasOcorrencias": "All reported occurrences",
+    "reportadas": "Reported",
+    "estadoEmAnalise": "Under Analysis",
+    "estadoEmResolucao": "In Resolution",
+    "resolvidas": "Resolved",
+    "estadoReportado": "Reported",
+    "estadoResolvido": "Resolved",
+    "baixo": "Low",
+    "medio": "Medium",
+    "alto": "High",
+    "critico": "Critical",
+    "estado": "Status",
+    "impacto": "Impact",
+    "tema": "Theme",
+    "atualizadaSucesso": "Occurrence updated successfully",
+    "emailEnviadoAdmin": "Email sent successfully to the administrator",
+    "nacional": "National",
+    "regional": "Regional",
+    "zona": "Zone",
+    "fotos": "photo(s)",
+    "nenhumaEncontrada": "No occurrences found",
+    "nenhumaCorrespondeFiltros": "No occurrences match the selected filters.",
+    "aindaNaoReportadas": "No structural occurrences have been reported yet.",
+    "reportarOcorrencia": "Report Occurrence"
   },
   "categorias": {
     "title": "Categories",
