--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -762,7 +762,33 @@
     "alta": "Alta",
     "critica": "Crítica",
     "semOcorrencias": "Nenhuma ocorrência registada",
-    "ocorrenciaCriada": "Ocorrência registada com sucesso"
+    "ocorrenciaCriada": "Ocorrência registada com sucesso",
+    "ocorrenciasEstruturais": "Ocorrências Estruturais",
+    "suasOcorrencias": "As suas ocorrências reportadas",
+    "todasOcorrencias": "Todas as ocorrências reportadas",
+    "reportadas": "Reportadas",
+    "estadoEmAnalise": "Em Análise",
+    "estadoEmResolucao": "Em Resolução",
+    "resolvidas": "Resolvidas",
+    "estadoReportado": "Reportado",
+    "estadoResolvido": "Resolvido",
+    "baixo": "Baixo",
+    "medio": "Médio",
+    "alto": "Alto",
+    "critico": "Crítico",
+    "estado": "Estado",
+    "impacto": "Impacto",
+    "tema": "Tema",
+    "atualizadaSucesso": "Ocorrência atualizada com sucesso",
+    "emailEnviadoAdmin": "Email enviado com sucesso para o administrador",
+    "nacional": "Nacional",
+    "regional": "Regional",
+    "zona": "Zona",
+    "fotos": "foto(s)",
+    "nenhumaEncontrada": "Nenhuma ocorrência encontrada",
+    "nenhumaCorrespondeFiltros": "Nenhuma ocorrência corresponde aos filtros selecionados.",
+    "aindaNaoReportadas": "Ainda não foram reportadas ocorrências estruturais.",
+    "reportarOcorrencia": "Reportar Ocorrência"
   },
   "categorias": {
     "title": "Categorias",
