Checkpoint: Adicionado skeleton loading ao painel de sugestões do Assistente IA para melhorar feedback visual durante carregamento

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -877,7 +877,8 @@
     "ocorrencias": "Occurrences",
     "tarefasToDo": "To-Do Tasks",
     "resultados": "Results",
-    "sugestoes": "Suggestions"
+    "sugestoes": "Suggestions",
+    "semSugestoes": "No suggestions available"
   },
   "minhasLojas": {
     "title": "My Stores",
