--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -827,7 +827,8 @@
     "ocorrencias": "Ocorrências",
     "tarefasToDo": "Tarefas To-Do",
     "resultados": "Resultados",
-    "sugestoes": "Sugestões"
+    "sugestoes": "Sugestões",
+    "semSugestoes": "Sem sugestões disponíveis"
   },
   "minhasLojas": {
     "title": "Minhas Lojas",
