Checkpoint: v6.4.4 - Corrigido bug de traduções em falta no modal de edição de loja. O problema era uma duplicação da chave 'common' no ficheiro pt.json que estava a sobrescrever as traduções originais.

--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -152,7 +152,10 @@
     "pendente": "Pendente",
     "concluido": "Concluído",
     "emProgresso": "Em Progresso",
-    "atrasado": "Atrasado"
+    "atrasado": "Atrasado",
+    "filtros": "Filtros",
+    "voltarDashboard": "Voltar ao Dashboard",
+    "erroDesconhecido": "Erro desconhecido"
   },
   "menu": {
     "groups": {
@@ -1178,13 +1181,5 @@
     "erroExportar": "Erro ao exportar categoria",
     "estadoAtualizado": "Estado atualizado",
     "erroAtualizarEstado": "Erro ao atualizar estado"
-  },
-  "common": {
-    "filtros": "Filtros",
-    "nenhum": "Nenhum",
-    "mes": "Mês",
-    "ano": "Ano",
-    "voltarDashboard": "Voltar ao Dashboard",
-    "erroDesconhecido": "Erro desconhecido"
   }
 }
