Checkpoint: v6.6 - Correção de traduções na página Histórico da Loja: Adicionadas chaves de tradução em falta nos ficheiros pt.json e en.json para a página Histórico da Loja (historicoLoja.configurarAnalise, historicoLoja.periodoSelecioneMeses, historicoLoja.loja, historicoLoja.gerarAnaliseIA, historicoLoja.compararPeriodos, e todas as chaves de comparação de períodos). Agora os textos aparecem corretamente em vez das chaves de tradução.

--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -565,7 +565,26 @@
     "erroGerar": "Erro ao gerar histórico. Tente novamente.",
     "analisarIA": "Analisar com IA",
     "analisandoIA": "A analisar histórico da loja com IA...",
-    "gerandoComparacao": "A gerar comparação entre períodos..."
+    "gerandoComparacao": "A gerar comparação entre períodos...",
+    "configurarAnalise": "Configurar Análise",
+    "periodoSelecioneMeses": "Selecione os meses a analisar",
+    "loja": "Loja",
+    "aAnalisar": "A analisar...",
+    "gerarAnaliseIA": "Gerar Análise IA",
+    "compararPeriodos": "Comparar Períodos",
+    "comparacaoEntrePeriodos": "Comparação entre Períodos",
+    "tipoComparacao": "Tipo de Comparação",
+    "q1AnoAnteriorVsAtual": "Q1 (Jan-Mar) Ano Anterior vs Atual",
+    "q2AnoAnteriorVsAtual": "Q2 (Abr-Jun) Ano Anterior vs Atual",
+    "q3AnoAnteriorVsAtual": "Q3 (Jul-Set) Ano Anterior vs Atual",
+    "q4AnoAnteriorVsAtual": "Q4 (Out-Dez) Ano Anterior vs Atual",
+    "s1AnoAnteriorVsAtual": "1º Semestre Ano Anterior vs Atual",
+    "s2AnoAnteriorVsAtual": "2º Semestre Ano Anterior vs Atual",
+    "anoCompleto": "Ano Completo Anterior vs Atual",
+    "aComparar": "A comparar...",
+    "gerarComparacao": "Gerar Comparação",
+    "dicaComparacao": "Selecione um período para comparar o desempenho da loja entre anos.",
+    "selecionePeriodoLoja": "Selecione um período e uma loja para gerar a análise."
   },
   "alertas": {
     "title": "Alertas",
