Checkpoint: Correção de traduções em falta na página Reuniões de Gestores - adicionadas todas as chaves de tradução em falta nos ficheiros pt.json e en.json

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -690,7 +690,56 @@
     "topicosLibertados": "Undiscussed topics released for next meeting!",
     "erroLibertar": "Error releasing topics",
     "instrucoesFolha": "Instructions - Sheet",
-    "gestoresPodemSubmeter": "Managers can submit topics on the page"
+    "gestoresPodemSubmeter": "Managers can submit topics on the page",
+    "historicoReunioes": "Meeting History",
+    "reunioesRealizadas": "Operational meetings held",
+    "reuniaoDe": "Meeting of",
+    "criadoPor": "Created by",
+    "em": "on",
+    "presencas": "Attendees",
+    "resumoAutomatico": "Automatic Summary",
+    "topicosPrincipais": "Main Topics",
+    "acoesIdentificadas": "Actions Identified",
+    "verConteudoCompleto": "View Full Content",
+    "detalhesReuniao": "Meeting Details",
+    "presencasGestores": "Attendees (Managers)",
+    "outrosPresentes": "Others Present (optional)",
+    "outrosPresentesPlaceholder": "E.g.: John Smith, Mary Jones...",
+    "conteudoReuniao": "Meeting Content",
+    "conteudoPlaceholder": "Describe the topics discussed, decisions made, etc...",
+    "tagsOpcional": "Tags (optional)",
+    "tagsPlaceholder": "E.g.: Sales, Strategy...",
+    "selecionados": "selected",
+    "submetidoPor": "Submitted by",
+    "topicosSeraoIncluidos": "topic(s) will be included in this meeting. After creating the meeting, you can mark which were actually discussed.",
+    "aGerarResumo": "Generating summary with AI...",
+    "criarReuniao": "Create Meeting",
+    "comTopicos": "with",
+    "erroConteudo": "Please describe the meeting content",
+    "pendentesCriados": "Pending items created successfully!",
+    "gerarRelatorio": "Generate Report",
+    "downloadPDF": "Download PDF",
+    "atribuirAcoes": "Assign Actions",
+    "finalizarTopicosTitle": "Finalize Meeting Topics",
+    "finalizarTopicosDesc": "Mark which topics were actually discussed and add the discussion outcome. Undiscussed topics will be released for the next meeting.",
+    "nenhumTopicoAssociado": "No topics associated with this meeting",
+    "topico": "Topic",
+    "resultadoDiscussao": "Discussion Outcome",
+    "resultadoPlaceholder": "Describe what was decided or concluded...",
+    "relatorioReuniao": "Meeting Report",
+    "relatorioGeradoDesc": "Report automatically generated based on meeting content and discussed topics.",
+    "resumoExecutivo": "Executive Summary",
+    "propostoPor": "Proposed by",
+    "acoesDefinidas": "Actions Defined",
+    "responsavel": "Responsible",
+    "prazo": "Deadline",
+    "criarPendentesAcoes": "Create Pending Items from Actions",
+    "adiadosProximaReuniao": "Postponed to Next Meeting",
+    "libertarProximaReuniao": "Release for Next Meeting",
+    "enviarRelatorioEmail": "Send Report by Email",
+    "selecioneGestoresEmail": "Select the managers who should receive the meeting report by email.",
+    "enviarRelatorio": "Send Report",
+    "consultarReunioes": "View operational meetings"
   },
   "reunioesLojas": {
     "title": "Store Meetings",
