--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -662,7 +662,56 @@
     "topicosLibertados": "Tópicos não discutidos libertados para próxima reunião!",
     "erroLibertar": "Erro ao libertar tópicos",
     "instrucoesFolha": "Instruções - Folha",
-    "gestoresPodemSubmeter": "Os gestores podem submeter tópicos na página"
+    "gestoresPodemSubmeter": "Os gestores podem submeter tópicos na página",
+    "historicoReunioes": "Histórico de Reuniões",
+    "reunioesRealizadas": "Reuniões operacionais realizadas",
+    "reuniaoDe": "Reunião de",
+    "criadoPor": "Criado por",
+    "em": "em",
+    "presencas": "Presenças",
+    "resumoAutomatico": "Resumo Automático",
+    "topicosPrincipais": "Tópicos Principais",
+    "acoesIdentificadas": "Ações Identificadas",
+    "verConteudoCompleto": "Ver Conteúdo Completo",
+    "detalhesReuniao": "Detalhes da Reunião",
+    "presencasGestores": "Presenças (Gestores)",
+    "outrosPresentes": "Outros Presentes (opcional)",
+    "outrosPresentesPlaceholder": "Ex: João Silva, Maria Costa...",
+    "conteudoReuniao": "Conteúdo da Reunião",
+    "conteudoPlaceholder": "Descreva os tópicos discutidos, decisões tomadas, etc...",
+    "tagsOpcional": "Tags (opcional)",
+    "tagsPlaceholder": "Ex: Vendas, Estratégia...",
+    "selecionados": "selecionado(s)",
+    "submetidoPor": "Submetido por",
+    "topicosSeraoIncluidos": "tópico(s) serão incluídos nesta reunião. Após criar a reunião, poderá marcar quais foram efetivamente discutidos.",
+    "aGerarResumo": "A gerar resumo com IA...",
+    "criarReuniao": "Criar Reunião",
+    "comTopicos": "com",
+    "erroConteudo": "Por favor, descreva o conteúdo da reunião",
+    "pendentesCriados": "Pendentes criados com sucesso!",
+    "gerarRelatorio": "Gerar Relatório",
+    "downloadPDF": "Download PDF",
+    "atribuirAcoes": "Atribuir Ações",
+    "finalizarTopicosTitle": "Finalizar Tópicos da Reunião",
+    "finalizarTopicosDesc": "Marque quais tópicos foram efetivamente discutidos e adicione o resultado da discussão. Tópicos não discutidos serão libertados para a próxima reunião.",
+    "nenhumTopicoAssociado": "Nenhum tópico associado a esta reunião",
+    "topico": "Tópico",
+    "resultadoDiscussao": "Resultado da Discussão",
+    "resultadoPlaceholder": "Descreva o que foi decidido ou concluído...",
+    "relatorioReuniao": "Relatório da Reunião",
+    "relatorioGeradoDesc": "Relatório gerado automaticamente com base no conteúdo da reunião e tópicos discutidos.",
+    "resumoExecutivo": "Resumo Executivo",
+    "propostoPor": "Proposto por",
+    "acoesDefinidas": "Ações Definidas",
+    "responsavel": "Responsável",
+    "prazo": "Prazo",
+    "criarPendentesAcoes": "Criar Pendentes a partir das Ações",
+    "adiadosProximaReuniao": "Adiados para Próxima Reunião",
+    "libertarProximaReuniao": "Libertar para Próxima Reunião",
+    "enviarRelatorioEmail": "Enviar Relatório por Email",
+    "selecioneGestoresEmail": "Selecione os gestores que devem receber o relatório da reunião por email.",
+    "enviarRelatorio": "Enviar Relatório",
+    "consultarReunioes": "Consultar reuniões operacionais"
   },
   "reunioesLojas": {
     "title": "Reuniões de Lojas",
